# model-checkpoint-engine

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  PRE_COMMIT_SETUP.md  PULL_REQUEST.md  README.md  REVIEW_FIX_SUMMARY.md  REVIEW_RESPONSE.md  create-pr.sh  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_hooks_standalone.py  test_pevit_requirements.py
docs/: IMPLEMENTATION_PLAN-9.20.25.md  OPTIMIZATION_REPORT-9.20.25.md  architecture.md
examples/: hook_examples.py  pytorch_training.py
model_checkpoint/: __init__.py
model_checkpoint/analytics/: __init__.py  comparison_engine.py  metrics_collector.py  model_selector.py  shared_utils.py  trend_analyzer.py
model_checkpoint/api/: __init__.py  base_api.py  rest_api.py
model_checkpoint/checkpoint/: __init__.py  enhanced_manager.py
model_checkpoint/checkpoint/storage/: __init__.py  base_backend.py  pytorch_backend.py
model_checkpoint/cleanup/: __init__.py  cleanup_scheduler.py  retention_manager.py
model_checkpoint/cloud/: __init__.py  base_provider.py  cloud_manager.py  s3_provider.py
model_checkpoint/config/: __init__.py  config_manager.py
model_checkpoint/core/: __init__.py  checkpoint.py  experiment.py
model_checkpoint/database/: __init__.py  base_connection.py  connection.py  enhanced_connection.py  migration_manager.py  models.py
model_checkpoint/database/migrations/: 001_add_step_tracking.sql  002_add_file_metadata.sql  003_add_best_model_flags.sql  004_add_performance_indices.sql
model_checkpoint/docs/: __init__.py  doc_generator.py
model_checkpoint/hooks/: __init__.py  base_hook.py  checkpoint_strategies.py  decorators.py  grid_monitoring.py  hook_manager.py  quaternion_validation.py
model_checkpoint/integrity/: __init__.py  checksum.py  verification.py
model_checkpoint/migration/: __init__.py  legacy_adapters.py  migration_manager.py
model_checkpoint/monitoring/: __init__.py  performance_monitor.py
model_checkpoint/notifications/: __init__.py  notification_manager.py
model_checkpoint/notifications/handlers/: __init__.py  base_handler.py  email_handler.py  webhook_handler.py
model_checkpoint/performance/: __init__.py  batch_operations.py  cache.py
model_checkpoint/phase3_shared/: __init__.py  shared_utils.py
model_checkpoint/plugins/: __init__.py  plugin_manager.py
model_checkpoint/reporting/: __init__.py  html.py
model_checkpoint/utils/: __init__.py  checksum.py
model_checkpoint/validation/: __init__.py  system_validator.py
model_checkpoint/visualization/: __init__.py  dashboard_engine.py
tests/: __init__.py  test_enhanced_checkpoint_manager.py  test_experiment_tracker.py  test_hook_system.py  test_integrity_verification.py  test_model_checkpoint.py  test_performance_optimizations.py  test_phase2_analytics.py  test_phase2_cloud.py  test_phase2_hooks.py  test_phase2_simplified.py  test_phase3_api.py  test_phase3_simplified.py  test_validation_module.py
